welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but ',' found.
	if (!weekday, vacation) {
                    ^sleepIn:6: error: illegal start of simple expression
}
^